# SakanaEnv

./: .gitignore  LICENSE  README.md  pyproject.toml
assets/3d/: predator.glb
assets/weights/: ppo_fish0_vecnorm.pkl
configs/env/: sakana.yaml
configs/exp/: dreamer_v3_sakana.yaml
docs/: evaluation.md
examples/: benchmark.py  run_boids.py  run_boids_anime.py  run_random.py
sakana_env/: __init__.py  boids.py  dreamer_env.py  env.py  gym_wrapper.py  mesh3d.py  planner.py  policies.py  rollout.py  sb3_weights.py  train.py  treequest_action.py  viz.py  viz_anime.py  viz_web.py
scripts/: capture_web_video.py  continue_dreamer.py  eval_dreamer.py  eval_treequest.py  make_3d_fish.py  make_anime_sprite.py  make_web_demo.py  plot_rewards.py  train_dreamer.py  train_sb3.py
tests/: test_smoke.py  test_web_demo_assets.py
web/: eval_results.txt  index.html
web/rollouts/: sakura.glb
